fix: button visibility

--- a/src/app/map/territory/create-update-territory/create-update-territory.component.scss
+++ b/src/app/map/territory/create-update-territory/create-update-territory.component.scss
@@ -3,7 +3,7 @@
 @import "node_modules/bootstrap/scss/mixins";
 
 #map2 {
-  height: 55svh;
+  height: 50svh;
 }
 
 //When width is less than 1200 we understand that height is also reduced
